# rltf

./: .gitignore  README.md  hyperparams.json  main.py  pyproject.toml
notebooks/: grpo_alignment.ipynb  rltf_fm_alignment.ipynb  rltf_sd_alignment.ipynb  self_distil.ipynb  train.ipynb
src/: config.py  data.py  data_processing.py  datatypes.py  env.py  inference.py  judge.py  main.py  masks.py  models.py  reward.py  self_distil.py  trainer.py  utils.py
