[project]
name = "rltf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=0.33.0",
    "aiohttp>=3.9.5",
    "datasets>=2.20.0",
    "google>=3.0.0",
    "google-genai>=1.66.0",
    "ipykernel>=7.2.0",
    "notebook>=7.5.5",
    "openai>=1.35.14",
    "pandas>=2.2.2",
    "peft>=0.11.1",
    "python-dotenv>=1.0.1",
    "torch>=2.4.0",
    "tqdm>=4.66.4",
    "transformers>=4.43.0",
    "trl>=0.9.6",
]
