[project]
name = "rltf"
version = "0.1.0"
description = "Reinforcement Learning from Text Feedback CLI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=0.33.0",
    "bitsandbytes>=0.43.0",
    "datasets>=2.20.0",
    "peft>=0.11.1",
    "torch>=2.4.0",
    "tqdm>=4.66.4",
    "transformers>=4.43.0",
    "vllm>=0.5.0",
]

