[project]
name = "rltf"
version = "0.1.0"
description = "Reinforcement Learning from Text Feedback CLI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=0.33.0",
    "bitsandbytes>=0.43.0",
    "datasets>=2.20.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "peft>=0.11.1",
    "psutil>=7.2.2",
    "torch>=2.4.0",
    "tqdm>=4.66.4",
    "transformers>=4.43.0",
    "vllm>=0.5.0",
]

